<resources>
    <string name="app_name">Good-Tilt</string>
    <string name="channel_id" translatable="false">010101</string>

    <string name="NONE">None</string>
    <string name="HOME">Home</string>
    <string name="BACK">Back</string>
    <string name="RECENT">Recent Apps</string>
    <string name="NOTIFY">Notification Bar</string>
    <string name="SHOT">Take Screenshot</string>
    <string name="SPLIT">Split Screen</string>

    <string name="PLAY_PAUSE">Start and Pause Media</string>
    <string name="NEXT">Next Media</string>
    <string name="PREV">Previous Media</string>
    <string name="CLOSE">Stop Media</string>
    <string name="REWIND">Rewind Media</string>

    <string name="SWIPE_UP">Swipe Up</string>
    <string name="SWIPE_DOWN">Swipe Down</string>
    <string name="SWIPE_HALT">Stop Swipe</string>

    <string name="LAUNCH_APP">Launch Application</string>
    <string name="LAUNCH_APP_CONFIG">Select Application</string>

    <string name="setting_action">Tap Action Settings</string>
    <string name="setting_swipe">Double Tap Action Settings</string>
    <string name="setting_general">General Settings</string>
    <string name="setting_sensitivity">Sensitivity Settings</string>
    <string name="setting_area">Touch Area Settings</string>

    <string name="area_invisible">Invisible Touch Area</string>
    <string name="area_width">Touch Area Width</string>
    <string name="area_height">Touch Area Height</string>
    <string name="area_vertical_position">Touch Area Position</string>

    <string name="in_tilt_action">Inside Tilt</string>
    <string name="out_tilt_action">Outside Tilt</string>
    <string name="up_tilt_action">Upside Tilt</string>
    <string name="down_tilt_action">Downside Tilt</string>

    <string name="upside_sensitivity">Upside Sensitivity</string>
    <string name="downside_sensitivity">Downside Sensitivity</string>
    <string name="inside_sensitivity">Inside Sensitivity</string>
    <string name="outside_sensitivity">Outside Sensitivity</string>
    <string name="minimum_angle">Minimum Angle</string>
    <string name="maximum_angle">Maximum Angle</string>
    <string name="swipe_speed">Swipe Speed</string>
    <string name="tangent_quad_1">First Quadrant Tangent</string>
    <string name="tangent_quad_2">Second Quadrant Tangent</string>
    <string name="tangent_quad_3">Third Quadrant Tangent</string>
    <string name="tangent_quad_4">Fourth Quadrant Tangent</string>

    <string name="vibration">Vibration</string>
    <string name="delay">Delay</string>
    <string name="show_notif">Show Notification</string>

    <string name="btn_next">Next page</string>
    <string name="btn_prev">Previous page</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_request">Request</string>
    <string name="btn_start">Automatic Configuration</string>

    <string name="notif_title">Good Tilt is running.</string>
    <string name="notif_content">Tab here to open setting.</string>

    <string name="tilt_config_in">Tilt your phone to your body as much as comfortable, and then release. </string>
    <string name="tilt_config_out">Tilt your phone opposite to your body as much as comfortable, and then release.</string>
    <string name="tilt_config_up">Tilt your phone upward as much as comfortable, and then release.</string>
    <string name="tilt_config_down">Tilt your phone downward as much as comfortable, and then release.</string>

    <string name="manual_hello">Welcome to Good-Tilt</string>
    <string name="manual_hello_info">Good Tilt is a service to provide fully one-handed use for smartphone users. \n\nYou can easily make actions by tilting your phone while touching edge of screen.</string>
    <string name="manual_guide">Instructions</string>
    <string name="manual_guide_need">If you need instructions on how to use Good-Tilt, press Next button below.</string>
    <string name="manual_guide_step1">Touch the green area on the edge.\n(Touch area is invisible while actually using)</string>
    <string name="manual_guide_step2">Tilt your phone until the red dot goes outside the green area. \n(dot is invisible while actually using)</string>
    <string name="manual_guide_step3">Notification open action occurred. \n(Notification open action is an example. You can set any actions later)</string>

    <string name="manual_sens_info">Tilt your phone</string>

    <string name="manual_area_info">You should touch the edge area of the screen to use Good-Tilt. \n\nIf the area is too big, it may interfere when using other apps. If the area is too small, it may be difficult to touch the area. \n(You can set after the tutorial ends.)</string>

    <string name="manual_permission">Permission Settings</string>
    <string name="manual_permission_info">Some Permissions are needed to use the service. \nPress Request button to allow them.</string>
    <string name="manual_permission_overlay">Appear On Top Permission</string>
    <string name="manual_permission_access">Accessibility Permission \n(Installed services - Check out Good-Tilt)</string>

    <string name="toast_overlay">Please allow Appear On Top permission</string>
    <string name="toast_access">Please allow Accessibility permission</string>
    <string name="cannot_use">Setting is not allowed while service running.</string>

    <string name="switch_using">Running</string>
    <string name="switch_not_using">Stopped</string>
</resources>