<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SeekBarPreference
        android:defaultValue="95"
        android:key="upside_sensitivity"
        android:max="240"
        android:title="@string/upside_sensitivity"
        app:iconSpaceReserved="false" />
    <SeekBarPreference
        android:defaultValue="20"
        android:key="downside_sensitivity"
        android:max="240"
        android:title="@string/downside_sensitivity"
        app:iconSpaceReserved="false" />
    <SeekBarPreference
        android:defaultValue="95"
        android:key="inside_sensitivity"
        android:max="240"
        android:title="@string/inside_sensitivity"
        app:iconSpaceReserved="false" />
    <SeekBarPreference
        android:defaultValue="20"
        android:key="outside_sensitivity"
        android:max="240"
        android:title="@string/outside_sensitivity"
        app:iconSpaceReserved="false" />
</PreferenceScreen>