<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manual_permission"
        android:textSize="@dimen/text_big"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_small"
        android:text="@string/manual_permission_info"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_items"
        android:text="@string/manual_permission_overlay"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textAccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manual_permission_access"
        android:textSize="@dimen/text_small"
        android:layout_marginTop="@dimen/margin_items"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/requestOverlay" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_next"
        android:textSize="@dimen/text_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_prev"
        android:textSize="@dimen/text_btn"
        android:layout_marginBottom="@dimen/margin_side"
        android:layout_marginStart="@dimen/margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textOverlay"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textOverlay"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textAccess"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textAccess"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <Button
        android:id="@+id/requestOverlay"
        android:text="@string/btn_request"
        android:textSize="@dimen/text_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_items"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textOverlay" />

    <Button
        android:text="@string/btn_request"
        android:id="@+id/requestAccess"
        android:textSize="@dimen/text_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_items"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textAccess" />

</androidx.constraintlayout.widget.ConstraintLayout>