<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/setting_area"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_items"
        android:textSize="@dimen/text_small"
        android:text="@string/manual_area_info"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.goodtilt.goodtilt.fragment.PrefAreaFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_items"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.goodtilt.goodtilt.source.OverlaySideView
        android:id="@+id/overlayLeft"
        android:layout_width="50dp"
        android:layout_height="400dp"
        android:background="@color/overlayDefault"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
    </com.goodtilt.goodtilt.source.OverlaySideView>

    <com.goodtilt.goodtilt.source.OverlaySideView
        android:id="@+id/overlayRight"
        android:layout_width="50dp"
        android:layout_height="400dp"
        android:background="@color/overlayDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
    </com.goodtilt.goodtilt.source.OverlaySideView>

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:textSize="@dimen/text_btn"
        android:layout_marginBottom="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_prev"
        android:textSize="@dimen/text_btn"
        android:layout_marginBottom="@dimen/margin_side"
        android:layout_marginStart="@dimen/margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>